# X-Touch-Controller

./: .gitignore  CMakeLists.txt  DJcontrollerLCM  DJpad  alsamidiin.c  alsaportlist  default_config_humanoid.json  main.cpp  readme.md  waveDemo
LCM/: XTouch_Parameter.lcm  humanoid_menu_data_lcmt.lcm
LCM/XTouchMsg/: XTouch_Parameter.hpp  humanoid_menu_data_lcmt.hpp
LCM/lcm-1.4.0/examples/matlab/: buildjar.sh  sendmessage.m
LCM/lcm-1.4.0/examples/types/: test_t.lcm
LCM/lcm-1.4.0/examples/types/lcmtypes/: test_t.java
LCM/lcm-1.4.0/lcm-java/javadocs/: allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  type-search-index.js
LCM/lcm-1.4.0/lcm-java/javadocs/lcm/lcm/: LCM.html  LCMDataInputStream.html  LCMDataOutputStream.html  LCMEncodable.html  LCMSubscriber.html  MessageAggregator.Message.html  MessageAggregator.html  package-summary.html  package-tree.html
LCM/lcm-1.4.0/lcm-java/javadocs/lcm/logging/: Log.Event.html  Log.html  package-summary.html  package-tree.html
bin_legacy/: alsamidiin  midiout
include/: ControlParameters.hpp  Fader.hpp  XTouch.hpp
legacy_bin/: in_nonblock
legacy_c/: midiin_nonblock.c  midiout.c
src/: ControlParameters.cpp  DJcontrollerLCM.c  Fader.cpp  XTouch.cpp  lcm_test.cpp  waveDemo.c
